# Mapper

./: .gitignore  README.md  TODO.md  shell.nix
backend/: TODO.md  backend.cabal
backend/database/: Campus.sql
backend/src/: Backend.hs
backend/src/Backend/Mapper/: Database.hs
backend/src/Backend/Mapper/Database/: Building.hs  Campus.hs  Floor.hs  Map.hs  Map.sql  Region.hs  Region.sql  Room.hs
nix/: sources.json
notes/: ideas.md  notes.md
