name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , beam-core
               , beam-migrate
               , beam-postgres
               , common
               , frontend
               , gargoyle
               , gargoyle-postgresql-connect
               , obelisk-backend
               , obelisk-route
               , text
  exposed-modules:
    Backend
  other-modules:
    Backend.Mapper.Database
    Backend.Mapper.Database.Map
    Backend.Mapper.Database.Region
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
